# decypher-env

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
benchmarks/baselines/: hard.html  hard.json  public.html  public.json  smoke.html  smoke.json
docker/: Dockerfile.base  Dockerfile.nemo  Dockerfile.openenv  Dockerfile.ors  docker-compose.yml
docs/: ARCHITECTURE.md  benchmark.md  security-sandbox.md  train-your-first-model.md  troubleshooting.md
docs/adapters/: gem.md  nemo.md  openenv.md  ors.md  skyrl.md  verifiers.md
docs/internals/: decoder_explained.html
examples/: README.md
examples/solvers/algebraic_relaxed/: README.md  solver.cpp
examples/solvers/baseline/: README.md  solver.cpp
examples/solvers/continuous_relaxed/: README.md  solver.cpp
examples/solvers/parallel_tempering/: README.md  solver.cpp
examples/solvers/random_metropolis/: README.md  solver.cpp
src/decoder/: __init__.py  aes_primitives.py  ascii_constraints.py  circuit.py  constraints.py  xts_model.py
src/decoder/encodings/: __init__.py  base.py  lowered.py  opaque.py
src/decoder/legacy/: README.md  __init__.py  cli.py  sample_blocks.py  sampler.py
src/decoder/legacy/backends/: __init__.py  base.py  python.py
src/decoder/legacy/backends/native/: __init__.py  _bridge.cpp  _bridge.pyx
src/decoder/legacy/backends/native/include/: algebraic_relaxed_engine.hpp  continuous_relaxed_engine.hpp  cpp_solver.hpp  pt_engine.hpp
src/decoder/legacy/backends/native/include/moves/: mutate.hpp  proposal.hpp
src/decoder/legacy/backends/native/include/sampler/: metropolis.hpp
src/decoder/legacy/backends/native/include/scoring/: lagrangian.hpp  scorer.hpp
src/decoder/legacy/backends/native/include/state/: byte_state.hpp  state.hpp
src/decoder/legacy/backends/native/solvers/: algebraic_relaxed.cpp  baseline.cpp  continuous_relaxed.cpp  parallel_tempering.cpp
src/decoder/legacy/backends/native/solvers/algebraic_relaxed/: algebraic_components.cpp  algebraic_components.hpp  belief_propagation.cpp  belief_propagation.hpp
src/decoder/legacy/backends/native/solvers/continuous_relaxed/: README.md
src/decoder/legacy/backends/native/solvers/moves/: mutate.cpp
src/decoder/legacy/backends/native/solvers/parallel_tempering/: README.md  api.cpp  byte_evaluator.cpp  byte_evaluator.hpp  circuit_model.cpp  circuit_model.hpp  constructor.cpp  diagnostics.cpp  diagnostics_collector.hpp  energy.cpp  evaluation.cpp  feasible_archive.hpp  hamming_scorer.cpp  hamming_scorer.hpp  helpers.cpp  internal.hpp  moves.cpp  optimization.cpp  proposals.cpp  proposals.hpp  replica_set.hpp  schedule.cpp  schedule.hpp  solver.hpp
src/decoder/legacy/backends/native/solvers/sampler/: metropolis.cpp
src/decoder/legacy/relaxations/: __init__.py  base.py  continuous.py  discrete.py
src/decoder/rl/: __init__.py  benchmark.py  benchmark_viz.py  curriculum.py  harness.py  reward.py  solver_env.py
src/decoder/rl/adapters/: __init__.py  _common.py  gem_env.py  nemo_env.py  openenv_env.py  ors_env.py  skyrl_env.py  verifiers_env.py
src/decoder/rl/native/harness/: harness.cpp  harness.hpp  harness_main.cpp
src/decoder/rl/native/harness/_build/: harness_c266463fa01c53fb
src/decoder/rl/native/include/: solver_sdk.hpp
src/decoder/rl/native/sdk/: solver_sdk.cpp
src/testing_setup/: generate_aes_xts_file.py  run_shared_key_sampler.py  run_window_fusion_sampler.py  summarize_sampler_profile.py
src/testing_setup/fusion_runs_gibbs_smoke/20260622T010652Z/: epoch_metrics.jsonl  fusion_summary.json  per_block_marginals.jsonl  window_metrics.jsonl
src/testing_setup/fusion_runs_gibbs_smoke/20260622T010711Z/: epoch_metrics.jsonl  fusion_summary.json  per_block_marginals.jsonl  window_metrics.jsonl
tests/: test_adapters.py  test_augmented_lagrangian.py  test_benchmark.py  test_decoder.py  test_example_parity.py  test_harness_hardening.py  test_solver_env.py
