[build-system]
requires = ["setuptools>=69", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "aes-xts-decoder"
version = "0.1.0"
description = "An RL environment for authoring AES-XTS solver plugins, with sandboxed on-demand C++ compilation and adapters to the major RL-environment frameworks."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
# --- In-process frameworks -------------------------------------------------
# Verifiers (PrimeIntellect) and OpenEnv require Python >= 3.11.
verifiers = ["verifiers>=0.1", "datasets>=2.14"]
# GEM (Axon-RL) ships on PyPI as `gem-llm` and imports as `gem`.
gem = ["gem-llm>=0.1"]
# SkyRL Gym (NovaSky) ships as `skyrl-gym` and imports as `skyrl_gym`.
skyrl = ["skyrl-gym>=0.3"]

# --- HTTP / server frameworks ----------------------------------------------
# OpenEnv (Meta PyTorch / Hugging Face) core runtime; MCP + FastMCP.
openenv = ["openenv-core>=0.3", "uvicorn>=0.30"]
# Open Reward Standard. Package name per the RL-environments guide; if it is not
# yet on PyPI, install it from its source repo (see docs/adapters/ors.md).
ors = ["ors", "uvicorn>=0.30"]
# NeMo Gym (NVIDIA) requires Python >= 3.12.
nemo = ["nemo-gym>=0.2", "fastapi>=0.110", "uvicorn>=0.30", "pydantic>=2.0"]

# --- Grouping extras -------------------------------------------------------
inprocess = [
    "aes-xts-decoder[verifiers]",
    "aes-xts-decoder[gem]",
    "aes-xts-decoder[skyrl]",
]
http = [
    "aes-xts-decoder[openenv]",
    "aes-xts-decoder[ors]",
    "aes-xts-decoder[nemo]",
]
all = [
    "aes-xts-decoder[inprocess]",
    "aes-xts-decoder[http]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.urls]
Documentation = "https://adithyask-rl-environments-guide.hf.space/"

[tool.setuptools.packages.find]
include = ["src", "src.*"]

# The RL environment compiles authored solvers on demand rather than shipping a
# prebuilt extension: the solver SDK + compile-and-run harness sources must
# travel with the package so src/decoder/rl/harness.py can build them at
# runtime.
[tool.setuptools.package-data]
"src.decoder.rl" = [
    "native/include/*.hpp",
    "native/sdk/*.cpp",
    "native/harness/*.hpp",
    "native/harness/*.cpp",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
